--- a/src/main/resources/templates/home-template.html
+++ b/src/main/resources/templates/home-template.html
@@ -13,17 +13,31 @@
     <link rel="stylesheet" href="/css/layout.css">
 </head>
 <body>
+<h1 class="header__title">Surviving Coding Boot Camp</h1>
 <div class="container">
     <header class="header">
-        <h1 class="header__title">Surviving Coding Boot Camp</h1>
+
         <nav class="header__nav">
-            <div class="header__nav-item"><a href="/" class="header__nav-link">Home</a></div>
-            <div class="header__nav-item"><a href="/hashtags" class="header__nav-link">Hashtags</a></div>
+            <ul>
+            <li><a href="/" class="header__nav-link">Home</a></li>
+            <li><a href="/hashtags" class="header__nav-link">Hashtags</a></li>
+             <li><a href="#">Topics</a>
+             <ul>
+              <li><a th:each="topic: ${topics}" th:text="${topic.name}" th:href="'/topics/'+${topic.id}" href="#"
+                     class="topics__nav-link"></a>
+              </li>
+             </ul>
+
+             </li>
+            </ul>
         </nav>
     </header>
+
     <main class="main-content">
-        <p class="welcome">Welcome to Surviving Coding Boot Camp, a blog dedicated to helping you get through boot camp and on to the
+        <div class="welcome">
+        <p >Welcome to Surviving Coding Boot Camp, a blog dedicated to helping you get through boot camp and on to the
             other side.</p>
+        </div>
         <section class="main-content__topics topics">
             <h2 class="topics__title main-content__title">Topics</h2>
             <nav class="main-content__nav topics__nav">
@@ -31,7 +45,15 @@
                    class="topics__nav-link"></a>
             </nav>
         </section>
+        <section>
+
+            <form th:action="'/topics/addTopic'" method="POST">
+                <label for="Box">Enter Topic Name</label>
+                <input type="text" id="Box" name="newTopic">
+                <button type="submit">Add Topic</button>
+            </form>
+        </section>
     </main>
-    </div>
+</div>
 </body>
 </html>
