--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -1,28 +1,34 @@
 @import url('https://fonts.googleapis.com/css2?family=Inconsolata&family=Montserrat&display=swap');
 
 :root{
-    --dark-background: #2F3E46;
-    --text: #cad2c5;
-    --light-highlight: #84A98C;
-    --dark-highlight: #52796f;
-    --light-background:#354f52;
+    --dark-background: #9c89b8;
+    --text:#b8bedd;
+    --light-highlight: #f0e6ef;
+    --dark-highlight: #ffff;
+    --light-background: #efc3e6;
 }
 
 h1{
     font-family: 'Inconsolata', monospace;
     font-size: 40px;
+    text-align: center;
 }
 h2{
     color:var(--light-highlight)
 }
 .container{
-    background-color: var(--light-background);
+    background-color: var(--dark-background);
+    padding: 50px;
 }
 html{
     font-family: 'Montserrat', sans-serif;
     font-size: 16px;
     background-color: var(--dark-background);
     color: var(--text);
+}
+.main-content__nav topics__nav{
+    background-color: var(--light-background);
+    padding: 50px;
 }
 .header{
     background-color: var(--light-background);
@@ -39,6 +45,44 @@ html{
 a{
     color: var(--dark-highlight); 
 }
-a:hover{
+li a:hover{
     color: var(--light-highlight);
 }
+ ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+
+}
+ li {
+    float:left;
+
+}
+ li a {
+     display: block;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+
+}
+
+ ul li ul {
+    display:none;
+     background-color: #efc3e6;
+}
+ ul li:hover ul {
+    display:block;
+}
+ li:hover ul li {
+    float:none;
+}
+ li ul {
+    position:absolute;
+}
+ .welcome{
+    text-align: center;
+     font-size: x-large;
+
+
+ }
